# radar-educativo

./: .env  .env.example  .gitignore  Makefile  PLAN_PRODUCTO.md  README.md  _barrancas_data.json  _establecimientos_js.txt  build_mart_alerta_temprana_abril_julio.py  catalog_agent.py  check_columns.py  check_matricula_counts.py  check_milestone_1.py  check_milestone_2.py  check_milestone_3.py  check_milestone_5.py  check_sep_counts.py  data_quality.md  db_setup.py  decision_log.md  init_database.sql  main.py  mart_alerta_temprana_abril.sql  mart_alerta_temprana_abril_julio.sql  metadata_service.py  milestone_2.md  milestone_3.md  milestone_5.md  netlify.toml  operative_agent.py  ops_close.ps1  package-lock.json  package.json  pyproject.toml  radar_edu.duckdb  radar_tridimensional_view.sql  render.yaml  requirements.txt  schema_rules.yaml  settings.yaml  (+9 more)
.claude/: launch.json
.netlify/: netlify.toml
agents/: documenter_agent.py  pal_extractor_agent.py  profile_agent.py  profile_transform_agent.py  test_catalog_agent.py
api/: main.py
config/: slep_config.yaml
docs/: first_run_checklist.md  mart_alerta_temprana_abril.md  mart_alerta_temprana_abril_julio.md  mart_alerta_temprana_sostenedor.md  milestone_1.md
infra/: Dockerfile.api  Dockerfile.web  daily_kpi_append.ps1  docker-compose.yml  nginx.conf  ops_close_v2.ps1
outputs/: 05_resumen_ejecutivo.md  08_checklist_operativo.md
scripts/: load_2025_summary.py  los_parques_assign.sql  pal_sync_render.sql  restore_to_render.sh
services/: ai_helper.py  test_pipeline_service.py
web/: .env.development  index.html  (+4 more)
(+89 files in other folders)
